syntax = "proto3";
package provider;
option go_package = "github.com/9triver/iarnet/internal/proto/resource/provider";

import "resource.proto";

message ProviderType {
  string name = 1;
}

message ConnectRequest {
  string provider_id = 1;
}

message ConnectResponse {
  bool success = 1;
  string error = 2;
  ProviderType provider_type = 3;
}

message GetCapacityRequest {
  string provider_id = 1; // 可选的 provider_id，用于鉴权
}

message GetCapacityResponse {
  resource.Capacity capacity = 1;
}

message GetAvailableRequest {
  string provider_id = 1; // 可选的 provider_id，用于鉴权
}

message GetAvailableResponse {
  resource.Info available = 1;
}

message DeployRequest {
  string image = 1;
  resource.Info resource_request = 2;
  map<string, string> env_vars = 3;
  string provider_id = 4; // 可选的 provider_id，用于鉴权
}

message DeployResponse {
  string error = 1;
}

message HealthCheckRequest {
  string provider_id = 1; // 可选的 provider_id，用于鉴权
}

message HealthCheckResponse {
}

message DisconnectRequest {
  string provider_id = 1;
}

message DisconnectResponse {
}

service Service {
  rpc Connect(ConnectRequest) returns (ConnectResponse);
  rpc Disconnect(DisconnectRequest) returns (DisconnectResponse);
  rpc GetCapacity(GetCapacityRequest) returns (GetCapacityResponse);
  rpc GetAvailable(GetAvailableRequest) returns (GetAvailableResponse);
  rpc Deploy(DeployRequest) returns (DeployResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}
